# new_RaSTA_rust

./: .dockerignore  .gitignore  Cargo-iheb.toml  Cargo.toml  README.md  tatus
.github/workflows/: rust.yml
apps/interlocking-controller/: Cargo.toml
apps/interlocking-controller/src/: main.rs
apps/ping-pong-node/: Cargo.toml
apps/ping-pong-node/src/: main.rs
apps/rasta-node/: Cargo.toml
apps/rasta-node/src/: main.rs  profile.rs
apps/signal-controller/: Cargo.toml
apps/signal-controller/src/: main.rs
crates/rasta-core/: Cargo.toml
crates/rasta-core/src/: application.rs  config-iheb.rs  config.rs  endpoint.rs  io.rs  lib.rs  port.rs  queue.rs  serial.rs  service.rs  tests-iheb.rs  tests.rs  time.rs  trace.rs
crates/rasta-core/src/connection/: heartbeat.rs  mod.rs  pdu.rs  retransmission.rs  safety_code.rs  sequencing.rs  state_machine.rs  time_supervision.rs
crates/rasta-core/src/redundancy/: channel.rs  crc.rs  defer_queue.rs  frame.rs  mod.rs  sequence.rs
crates/rasta-platform/: Cargo.toml
crates/rasta-platform/src/: embedded_ethernet.rs  lib.rs  std_clock.rs  udp.rs
docker/interop/: Dockerfile.rust  Dockerfile.sbb-wrapper  README.md  docker-compose.yml
docs/: development-guide.md  din-rasta-03-03-traceability.md  docker-interop.md  eulynx-context.md  final-interop-summary.md  final-protocol-gap-audit.md  ping-pong-test.md  profiles.md  public-api.md  sbb-baseline-investigation.md  sbb-rust-interop-plan.md  sbb-wrapper-design.md  sbb-wrapper-test-evidence.md  signal-interlocking-example.md  state-event-test-matrix.md  test-comparison-sbb-librasta.md  test-coverage-matrix.md  tracing-and-errors.md  transport-abstraction.md  workspace-migration.md
interop/: README.md  librasta-wire-compatibility.md  live-rust-to-librasta-result.md  packet-capture.md  profile-comparison.md  test-plan.md  wire-checklist.md
interop/results/: sbb-rust-ping-pong-5-rounds.md  template.md
interop/sbb-wrapper/: CMakeLists.txt  README.md  sbb-timeout-instrumentation.patch
interop/sbb-wrapper/src/: README.md  main.c  ping_pong_payload.c  ping_pong_payload.h  ping_pong_responder.c  ping_pong_responder.h  rtt_benchmark.c  rtt_benchmark.h  sbb_adapter.c  sbb_adapter.h  sbb_diagnostics.c  sbb_diagnostics.h  sbb_endpoint.c  sbb_endpoint.h  sbb_redundancy_notifications.c  sbb_safety_notifications.c  sbb_system_adapter.c  sbb_timeout_instrumentation.h  udp_transport.c  udp_transport.h  wrapper_settings.c  wrapper_settings.h
interop/sbb-wrapper/tests/: buffered_diagnostics_test.c  ping_pong_payload_test.c  ping_pong_responder_test.c  rtt_benchmark_test.c  sbb_adapter_bridge_test.c  sbb_safretl_smoke_test.c  sbb_transport_notification_test.c  trace_disabled_output_test.c  udp_transport_test.c  wrapper_settings_test.c
poster-evidence/: 01-git-status.txt  02-uncommitted-docs.diff  11-workspace-check.txt  12-clippy.txt  13-core-no-default-features.txt  20-all-tests.txt  21-test-list-build-output.txt  22-test-list.txt  23-tests-by-package.csv
rasta_stack/: Cargo.toml  README.md
rasta_stack/src/: backends.rs  core.rs  lib.rs  platform.rs  tests.rs
rasta_stack/src/application/: api.rs
rasta_stack/src/backends/: embedded_eth.rs  mock_transport.rs  tcp_linux.rs  udp_linux.rs
rasta_stack/src/core/: connection.rs  heartbeat.rs  packet.rs  redundancy.rs  retransmission.rs  safety_code.rs  sequence.rs  state_machine.rs
rasta_stack/src/platform/: clock.rs  logger.rs  timer.rs  transport.rs
src/: adapters.rs  config.rs  fixed_queue.rs  lib.rs  packet_io.rs  platform.rs  redundancy_crc.rs  serial.rs  srl.rs  tests.rs
src/adapters/: embedded_ethernet.rs  socket_transport.rs  standard_clock.rs
src/application/: service_interface.rs
src/core/: connection.rs  connection_state_machine.rs  heartbeat.rs  pdu.rs  redundancy_management.rs  retransmission.rs  safety_code.rs  sequencing.rs  time_supervision.rs
src/platform/: clock.rs  random.rs  transport.rs
tests/specs/: README.md
tests/specs/docker/: docker-rust-to-librasta.md  docker-rust-to-rust.md  docker-rust-to-sbb.md
tests/specs/integration/: channel-failure-and-recovery.md  graceful-disconnect.md  rust-to-rust-data-transfer.md  rust-to-rust-handshake.md  rust-to-rust-ping-pong.md  signal-controller-to-interlocking-controller-use-case.md  two-channel-redundancy.md
tests/specs/interoperability/: docker-interop.md  rust-to-librasta-40-second-heartbeat.md  rust-to-librasta-data-transfer.md  rust-to-librasta-handshake.md  rust-to-librasta-ping-pong.md  rust-to-sbb-handshake.md  rust-to-sbb-live-baseline.md  rust-to-sbb-ping-pong.md  rust-to-sbb-preparation.md  sbb-build-and-baseline.md  sbb-wrapper-build.md  sbb-wrapper-design.md  sbb-wrapper-plan.md  sbb-wrapper-redl-bridge.md  sbb-wrapper-safretl-run-loop.md  sbb-wrapper-sbb-to-sbb-baseline.md  sbb-wrapper-skeleton.md  sbb-wrapper-udp-transport.md
tests/specs/unit/: confirmed-sequence-handling.md  error-handling.md  heartbeat-handling.md  packet-encoding-decoding.md  profile-config-validation.md  redundancy-layer.md  retransmission-buffer.md  safety-code-checksum-crc.md  sequence-numbering.md  state-machine-transitions.md  time-supervision.md  transport-trait-behavior.md
